suppress JVM warnings when running Bazel jars